show product from db

--- a/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -377,6 +377,7 @@
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
                 @RenderSection("dashboard",false)
+                @RenderSection("category",false)
                 <!-- /.container-fluid -->
 
             </div>
