--- a/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -378,6 +378,7 @@
                 <!-- Begin Page Content -->
                 @RenderSection("dashboard",false)
                 @RenderSection("category",false)
+                @RenderSection("create",false)
                 <!-- /.container-fluid -->
 
             </div>
