--- a/EshopMVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Model.Entity.CATEGORY>
+﻿@model Model.Entity.CATEGORY
 
 @{
     ViewBag.Title = "Index";
@@ -22,23 +22,24 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Physical Product</h5>
+                                        <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Category</h5>
                                         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                                     </div>
-                                    <div class="modal-body">
-                                        <form class="needs-validation">
-                                            <div class="form">
-                                                <div class="form-group">
-                                                    <label for="validationCustom01" class="mb-1">Category Name :</label>
-                                                    <input class="form-control" id="validationCustom01" type="text">
+                                    @using (Html.BeginForm())
+                                    {
+                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        <div class="modal-body">
+                                            <form class="needs-validation">
+                                                <div class="form">
+                                                    <div class="form-group">
+                                                        @Html.LabelFor(model => model.CATEGORYNAME, htmlAttributes: new { @class = "mb-1" })
+                                                        @Html.EditorFor(model => model.CATEGORYNAME, new { htmlAttributes = new { @class = "form-control" } })
+                                                        @Html.ValidationMessageFor(model => model.CATEGORYNAME, "", new { @class = "text-danger" })
+                                                    </div>
                                                 </div>
-                                                <div class="form-group mb-0">
-                                                    <label for="validationCustom02" class="mb-1">Category Image :</label>
-                                                    <input class="form-control" id="validationCustom02" type="file">
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
+                                            </form>
+                                        </div>
+                                    }
                                     <div class="modal-footer">
                                         <button class="btn btn-primary" type="button">Save</button>
                                         <button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Close</button>
