--- a/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -55,7 +55,7 @@
         <div class="page-main-header">
             <div class="main-header-right row">
                 <div class="main-header-left d-lg-none w-auto">
-                    <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="~/Content/assets/images/dashboard/multikart-logo.png" alt=""></a></div>
+                    <div class="logo-wrapper"><a href="#"><img class="blur-up lazyloaded" src="~/Content/assets/images/dashboard/multikart-logo.png" alt=""></a></div>
                 </div>
                 <div class="mobile-sidebar w-auto">
                     <div class="media-body text-end switch-sm">
@@ -125,7 +125,7 @@
                                 <li><a href="#"><i data-feather="mail"></i>Inbox</a></li>
                                 <li><a href="#"><i data-feather="lock"></i>Lock Screen</a></li>
                                 <li><a href="#"><i data-feather="settings"></i>Settings</a></li>
-                                <li><a href="#"><i data-feather="log-out"></i>Logout</a></li>
+                                <li><a href="@Url.Action("Logout","LogIn")"><i data-feather="log-out"></i>Logout</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -140,7 +140,7 @@
             <!-- Page Sidebar Start-->
             <div class="page-sidebar">
                 <div class="main-header-left d-none d-lg-block">
-                    <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="~/Content/assets/images/dashboard/multikart-logo.png" alt=""></a></div>
+                    <div class="logo-wrapper"><a href="@Url.Action("AdminHome","AdminHome")"><img class="blur-up lazyloaded" src="~/Content/assets/images/dashboard/multikart-logo.png" alt=""></a></div>
                 </div>
                 <div class="sidebar custom-scrollbar">
                     <div class="sidebar-user text-center">
@@ -156,14 +156,10 @@
                             <a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Resources</span><i class="fa fa-angle-right pull-right"></i></a>
                             <ul class="sidebar-submenu">
                                 <li>
-                                    <a href="#">
+                                    <a href="@Url.Action("Index","Category")">
                                         <i class="fa fa-circle"></i>
-                                        <span>Category</span> <i class="fa fa-angle-right pull-right"></i>
+                                        <span>Category Management</span></i>
                                     </a>
-                                    <ul class="sidebar-submenu">
-                                        <li><a href='@Url.Action("Index","Category")'><i class="fa fa-circle"></i>Category List</a></li>
-                                        <li><a href="add-product.html"><i class="fa fa-circle"></i>Add Category</a></li>
-                                    </ul>
                                 </li>
                                 <li>
                                     <a href="#">
