--- a/EshopMVC/Areas/Admin/Views/Register/Index.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Register/Index.cshtml
@@ -1,9 +1,8 @@
-﻿
+﻿@model Model.Entity.USERINFO
+
 @{
     Layout = null;
 }
-
-@model EshopMVC.Areas.AdminArea.Data.LoginModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,8 +14,8 @@
     <meta name="description" content="Multikart admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Multikart admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/dashboard/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/dashboard/favicon.png" type="image/x-icon">
+    <link rel="icon" href="~/Content/assets/images/dashboard/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Content/assets/images/dashboard/favicon.png" type="image/x-icon">
     <title>Multikart - Premium Admin Template</title>
 
     <!-- Google font-->
@@ -171,39 +170,35 @@
                             <div class="card-body">
                                 <ul class="nav nav-tabs nav-material" id="top-tab" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link active" id="top-profile-tab" data-bs-toggle="tab" href="#top-profile" role="tab" aria-controls="top-profile" aria-selected="true"><span class="icon-user me-2"></span>Login</a>
+                                        <a class="nav-link " href="@Url.Action("Index","LogIn")" role="tab" aria-controls="top-profile" aria-selected="true"><span class="icon-user me-2"></span>Login</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="@Url.Action("Index","Register")" role="tab" aria-controls="top-contact" aria-selected="false"><span class="icon-unlock me-2"></span>Register</a>
+                                        <a class="nav-link active" id="contact-top-tab" data-bs-toggle="tab" href="#top-contact" role="tab" aria-controls="top-contact" aria-selected="false"><span class="icon-unlock me-2"></span>Register</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content" id="top-tabContent">
-                                    <div id="top-profile" role="tabpanel" aria-labelledby="top-profile-tab">
-                                        @using (Html.BeginForm("Login", "LogIn", FormMethod.Post))
-                                        {
-                                            //To make sure token client is match with server
-                                            @Html.AntiForgeryToken()
-                                            @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
+                                    <div id="top-contact" role="tabpanel" aria-labelledby="contact-top-tab">
+                                        <form class="form-horizontal auth-form">
                                             <div class="form-group">
-                                                @Html.TextBoxFor(Model => Model.UserName, new { @class = "form-control", @placeholder = "UserName", @autofocus = "autofocus" })
+                                                <input required="" name="login[username]" type="email" class="form-control" placeholder="Username" id="exampleInputEmail12">
                                             </div>
                                             <div class="form-group">
-                                                @Html.TextBoxFor(Model => Model.Password, new { @class = "form-control", @placeholder = "Password", @type = "password" })
+                                                <input required="" name="login[password]" type="password" class="form-control" placeholder="Password">
+                                            </div>
+                                            <div class="form-group">
+                                                <input required="" name="login[password]" type="password" class="form-control" placeholder="Confirm Password">
                                             </div>
                                             <div class="form-terms">
                                                 <div class="form-check mesm-2">
-                                                    <input type="checkbox" class="form-check-input" id="customControlAutosizing">
-                                                    <label class="form-check-label ps-2" for="customControlAutosizing">Remember me</label>
-                                                    <a href="#" class="btn btn-default forgot-pass">lost your password</a>
+                                                    <input type="checkbox" class="form-check-input" id="customControlAutosizing1">
+                                                    <label class="form-check-label ps-2" for="customControlAutosizing1"><span>I agree all statements in <a href="" class="pull-right">Terms &amp; Conditions</a></span></label>
                                                 </div>
                                             </div>
                                             <div class="form-button">
-                                                <button type="submit" class="btn btn-primary" , id="btnsubmit">
-                                                    Sign in
-                                                </button>
+                                                <button class="btn btn-primary" type="submit">Register</button>
                                             </div>
                                             <div class="form-footer">
-                                                <span>Or Login up with social platforms</span>
+                                                <span>Or Sign up with social platforms</span>
                                                 <ul class="social">
                                                     <li><a class="ti-facebook" href=""></a></li>
                                                     <li><a class="ti-twitter" href=""></a></li>
@@ -211,8 +206,9 @@
                                                     <li><a class="ti-pinterest" href=""></a></li>
                                                 </ul>
                                             </div>
-                                        }
+                                        </form>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
@@ -250,16 +246,12 @@
 
     <!--script admin-->
     <script src="~/Content/assets/js/admin-script.js"></script>
-    <script>
-        $('.single-item').slick({
+    <script>$('.single-item').slick({
             arrows: false,
             dots: true
         }
-        );
-    </script>
+    );</script>
 
 </body>
 </html>
-
-
 
