Add product Function

--- a/EshopMVC/Areas/Admin/Views/Login/Index.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Login/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 
-@model EshopMVC.Areas.AdminArea.Data.LoginModel
+@model EshopMVC.Areas.Admin.Data.LoginModel
 
 <!DOCTYPE html>
 <html lang="en">
