--- a/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -168,7 +168,7 @@
                                     </a>
                                     <ul class="sidebar-submenu">
                                         <li><a href="product-listdigital.html"><i class="fa fa-circle"></i>Product List</a></li>
-                                        <li><a href="add-digital-product.html"><i class="fa fa-circle"></i>Add Product</a></li>
+                                        <li><a href="@Url.Action("Create","Product")"><i class="fa fa-circle"></i>Add Product</a></li>
                                     </ul>
                                 </li>
                             </ul>
