--- a/EshopMVC/Areas/Admin/Views/Product/Create.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Product/Create.cshtml
@@ -54,12 +54,20 @@
                                 </div>
                             </div>
                             <div class="col-xl-7">
-                                @using (Html.BeginForm())
+                                <!--enctype for upload image files-->
+                                @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
                                 {
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     @Html.AntiForgeryToken()
                                     <div class="form-horizontal">
                                         <hr />
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                        <div class="form-group row">
+                                            @Html.LabelFor(model => model.ProductCategory, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            <div class="col-md-10">
+                                                @Html.DropDownListFor(model => model.ProductCategory, null, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.ProductCategory, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
@@ -77,17 +85,16 @@
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.TextBoxFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
                                                 <ul class="file-upload-product">
-                                                    <li><div class="box-input-file"><input class="upload" type="file"></div></li>
+                                                    <li><div class="box-input-file"><input class="upload" type="file" name="file" id="file"></div></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             @Html.LabelFor(model => model.ProductDesc, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-xl-8 col-sm-7 description-sm">
-                                                @Html.TextAreaFor(model => model.ProductDesc, htmlAttributes: new { @id = "editor1" })
+                                                @Html.TextAreaFor(model => model.ProductDesc, new { htmlAttributes = new { @id = "cke_1_contents" } })
+                                                @Html.ValidationMessageFor(model => model.ProductDesc, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                     </div>
