add alert function to UI and admin script

--- a/EshopMVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Category/Index.cshtml
@@ -56,26 +56,8 @@
     </div>
 </div>
 
-<!-- Container-fluid Ends-->
-<!-- Bootstrap js-->
-<script src="~/Content/assets/js/bootstrap.bundle.min.js"></script>
-
-<!-- feather icon js-->
-<script src="~/Content/assets/js/icons/feather-icon/feather.min.js"></script>
-<script src="~/Content/assets/js/icons/feather-icon/feather-icon.js"></script>
-
-<!-- Sidebar jquery-->
-<script src="~/Content/assets/js/sidebar-menu.js"></script>
-
-<!--Customizer admin-->
-<script src="~/Content/assets/js/admin-customizer.js"></script>
-
-<!--right sidebar js-->
-<script src="~/Content/assets/js/chat-menu.js"></script>
-
-<!--script admin-->
-<script src="~/Content/assets/js/admin-script.js"></script>
-
-<!--JsGrid-->
-<script src="~/Content/assets/js/jsgrid/jsgrid.min.js"></script>
-<script src="~/Content/assets/js/jsgrid/jsgrid-manage-product.js"></script>
+@section script{
+    <!--JsGrid-->
+    <script src="~/Content/assets/js/jsgrid/jsgrid.min.js"></script>
+    <script src="~/Content/assets/js/jsgrid/jsgrid-manage-product.js"></script>
+}
