list product and create helper folder

--- a/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -44,6 +44,8 @@
 
     <!-- jsgrid css-->
     <link rel="stylesheet" type="text/css" href="~/Content/assets/css/vendors/jsgrid.css">
+
+    @RenderSection("css", false)
 </head>
 
 <body>
@@ -167,7 +169,7 @@
                                         <span>Product</span> <i class="fa fa-angle-right pull-right"></i>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="product-listdigital.html"><i class="fa fa-circle"></i>Product List</a></li>
+                                        <li><a href="@Url.Action("Index","Product")"><i class="fa fa-circle"></i>Product List</a></li>
                                         <li><a href="@Url.Action("Create","Product")"><i class="fa fa-circle"></i>Add Product</a></li>
                                     </ul>
                                 </li>
