--- a/EshopMVC/Areas/Admin/Views/Product/Edit.cshtml
+++ b/EshopMVC/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model EshopMVC.Areas.Admin.Data.ProductModel
+﻿@model Database.Entity.PRODUCT
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -55,35 +55,35 @@
                             </div>
                             <div class="col-xl-7">
                                 <!--enctype for upload image files-->
-                                @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                @using (Html.BeginForm("Edit", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
                                 {
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     @Html.AntiForgeryToken()
                                     <div class="form-horizontal">
                                         <hr />
                                         <div class="form-group row">
-                                            @Html.LabelFor(model => model.ProductCategory, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.PRODUCTCATEGORY, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.DropDownListFor(model => model.ProductCategory, null, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ProductCategory, "", new { @class = "text-danger" })
+                                                @Html.DropDownListFor(model => model.PRODUCTCATEGORY, null, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.PRODUCTCATEGORY, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.PRODUCTNAME, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.TextBoxFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
+                                                @Html.TextBoxFor(model => model.PRODUCTNAME, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.PRODUCTNAME, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.PRODUCTPRICE, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
-                                                @Html.TextBoxFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
-                                                @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
+                                                @Html.TextBoxFor(model => model.PRODUCTPRICE, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.PRODUCTPRICE, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.PRODUCTIMAGE, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-md-10">
                                                 <ul class="file-upload-product">
                                                     <li><div class="box-input-file"><input class="upload" type="file" name="file" id="file"></div></li>
@@ -91,15 +91,15 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            @Html.LabelFor(model => model.ProductDesc, htmlAttributes: new { @class = "control-label col-md-2" })
+                                            @Html.LabelFor(model => model.PRODUCTDESC, htmlAttributes: new { @class = "control-label col-md-2" })
                                             <div class="col-xl-8 col-sm-7 description-sm">
-                                                @Html.TextAreaFor(model => model.ProductDesc, new { htmlAttributes = new { @id = "cke_1_contents" } })
-                                                @Html.ValidationMessageFor(model => model.ProductDesc, "", new { @class = "text-danger" })
+                                                @Html.TextAreaFor(model => model.PRODUCTDESC, new { htmlAttributes = new { @id = "cke_1_contents" } })
+                                                @Html.ValidationMessageFor(model => model.PRODUCTDESC, "", new { @class = "text-danger" })
                                             </div>
                                         </div>
                                     </div>
                                     <div class="offset-xl-3 offset-sm-4">
-                                        <button type="submit" class="btn btn-primary">Add</button>
+                                        <button type="submit" class="btn btn-primary">Edit</button>
                                         <button type="button" class="btn btn-light" onclick="location.href='@Url.Action("Index","Product")'">Discard</button>
                                     </div>
                                 }
@@ -155,3 +155,4 @@
 
 <!--script admin-->
 <script src="~/Content/assets/js/admin-script.js"></script>
+
